crates/rwkv-derive/tests/ui/fail/config_builder_missing_cell.rs
use rwkv_derive::ConfigBuilder;

#[derive(ConfigBuilder)]
#[config_builder(raw = "crate::RawConfig")]
pub struct FinalConfig {
    value: usize,
}

fn main() {}
